@@ -1214,7 +1214,7 @@ The user is informed that a message has been sent to the email address and that 
 <dl>
 	<!-- ###SUB_INCLUDED_FIELD_password### -->
 	<dt>
-		<label for="tx-srfeuserregister-pi1-password">###LABEL_PASSWORD### ###REQUIRED_PASSWORD###</label>
+		<label for="tx-srfeuserregister-pi1-password">###LABEL_NEW_PASSWORD### ###REQUIRED_PASSWORD###</label>
 	</dt>
 	<dd>
 		<!-- ###SUB_ERROR_FIELD_password### -->
