@@ -2,6 +2,8 @@
 	* Add feature #28370: replyTo feature for mails sent to user
 	* Add feature #6168 (old bug tracker): Support itemsProcFunc property of TCA select and radio fields (Thanks to Jeff Segars)
 	* Fix bug #12795 (old bug tracker): Default setup damages valid e-mail adresses
+	* Fix bug #13765 (old bug tracker): Attachment file is attached to the administrative review email
+	* Follow-up 8 to feature #34447: Add ###LABEL_NEW_PASSWORD### on ###TEMPLATE_EDIT###
 
 2012-04-07 Stanislas Rolland  <typo3@sjbr.ca>
 	* Follow-up 7 to feature #34447: ###HIDDENFIELDS### not always replaced
